$Id$

2014-07-09  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Avoid '.SH' macros with no
	argument.  Remove colons from section names.

2014-07-05  Christian Franke  <franke@computer.org>

	configure.ac: Remove snprintf() compile time test.
	Add '--with-working-snprintf' configure option.
	Add __USE_MINGW_ANSI_STDIO test for MinGW GCC.
	utility.cpp: Add snprintf() runtime test.
	Add GCC version to output of -V option.
	Makefile.am: Add update-smart-drivedb.1m for Solaris.

2014-06-30  Christian Franke  <franke@computer.org>

	configure.ac: Update macros as suggested by 'autoconf --warnings=obsolete'.
	Makefile.am: Add creation of empty directories to install targets.

2014-06-29  Christian Franke  <franke@computer.org>

	configure.ac, Makefile.am, smartd.cpp, smartd_warning.sh.in:
	Add '--with-smartdscriptdir' configure option to change location of
	smartd_warning.sh (Debian bug 710815).
	Add '--with-smartdplugindir' configure option to change (or disable)
	smartd_warning.sh plugin location.
	smartd.conf.5.in: Optionally hide the plugin documentation.

2014-06-27  Christian Franke  <franke@computer.org>

	Makefile.am: Add update-smart-drivedb.8 target.
	update-smart-drivedb.8.in: Add copyright and version info.
	Adjust path names for make target.
	Add FreeBSD/OpenBSD specific info.

2014-06-27  Hannes von Haugwitz  <hannes@vonhaugwitz.com>

	update-smart-drivedb.8.in: New man page (Debian bug 708433).

2014-06-27  Christian Franke  <franke@computer.org>

	configure.ac: Suppress pkg-config warnings about missing 'systemd.pc'.
	Makefile.am: Silence build of man pages and svnversion.h.
	This makes '--enable-silent-rules' or 'make V=0' more effective
	(available since automake 1.13).

2014-06-27  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron RealSSD C300/M500: New attributes (ticket #326)
	- SandForce Driven SSDs: ADATA XM11, Corsair Force LS, OWC Aura Pro 6G